# Asteroids

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  game_constants.hpp  main.cpp
src/collision/: CMakeLists.txt  collision.cpp  collision.hpp
src/game_math/: CMakeLists.txt  custom_math.cpp  custom_math.hpp  math.cpp  math.hpp
src/game_objects/: CMakeLists.txt  asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  spaceship.cpp  spaceship.hpp
src/rendering/: CMakeLists.txt  initialising.cpp  initialising.hpp  texture.cpp  texture.hpp
src/timing/: CMakeLists.txt  timer.cpp  timer.hpp
